# duadp

./: .devfile.yaml  .gitignore  .gitlab-ci.yml  .npmrc  .redocly.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  ai.json  docker-compose.federation.yml  lefthook.yml  llms.txt  mcp.json  package-lock.json  package.json
.git-local-hooks/: pre-commit
.gitlab/duo/: AI_CATALOG_SETUP.md  mcp.json
cli/: package.json
cli/src/: cli.ts
codex-1-duadp-discovery-rehome/: .gitlab-ci.yml  duadp.http_services_api.yml  duadp.info.yml  duadp.services.yml  import_duadp_node.php
codex-release-v0.1.x-promotion/: AGENTS.md  README.md  composer.json  duadp.routing.yml
plans/: did_integration_vision.md
reference-node/: .cursorrules  .env.example  AGENTS.md  CONTRACT.md  DATA.md  Dockerfile  ai.json  docker-compose.oracle.yml  docker-compose.yml  llms.txt  mcp.json  package-lock.json  package.json  tsconfig.json
reference-node/PROMPTS/: system.txt
reference-node/policies/: duadp-authorization.cedar  duadp.cedarschema
reference-node/scripts/: generate-platform-agents-seed.ts  test-did-key-publish.ts
reference-node/seeds/: kiro-powers.snapshot.json  skills-sh.snapshot.json
reference-node/src/: auth-actor.test.ts  auth-actor.ts  cedar-evaluator.test.ts  cedar-evaluator.ts  cedar-trust-tier-matrix.test.ts  confidence-gate.ts  content-store.ts  context-packs.ts  control-plane-routes.test.ts  control-plane-routes.ts  control-plane-schemas.ts  crdt-registry.ts  db.ts  index.ts  (+19 more)
resolver-mcp/: mcp.json  package-lock.json  package.json
scripts/: federate.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/bluefly_duadp/: cli.py  conformance.py  crypto.py
sdk/python/src/bluefly_uadp/: __init__.py  types.py
sdk/python/src/duadp/: __init__.py  cli.py  client.py  did.py  server.py  types.py  validate.py
sdk/python/src/ossa_uadp/: __init__.py  client.py  crypto.py  did.py  types.py
sdk/python/tests/: test_client_resolution.py  test_inspector_client.py
seeds/: discover-seed.json  drupal-seed.json  registry-seed.json
spec/: README.md  openapi.yaml
(+217 files in other folders)
