[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluefly-duadp"
version = "0.1.0"
description = "DUADP — Decentralized Universal AI Discovery Protocol SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["uadp", "duadp", "ossa", "agent", "discovery", "federation", "ai"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://duadp.org"
Repository = "https://gitlab.com/blueflyio/ossa/lab/duadp"
Issues = "https://gitlab.com/blueflyio/ossa/lab/duadp/-/issues"

[project.optional-dependencies]
crypto = ["cryptography>=43.0"]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]
all = ["cryptography>=43.0", "fastapi>=0.115.0", "uvicorn>=0.30.0"]

[project.scripts]
uadp-test = "bluefly_uadp.conformance:main"
